--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Mohammed Ashique S - MERN Stack Developer Portfolio. Showcasing projects, skills, and experience in web development."
+      content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Mohammed Ashique S - MERN Stack Developer</title>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
